# sandbox

./: .gitignore  README.md
.github/workflows/: action.yml
aws/: .gitignore  main.tf  variables.tf
html-css-js/chapter01/: index.html
html-css-js/chapter02/: index.html
html-css-js/chapter02/css/: style.css
html-css-js/chapter03/: index.html
html-css-js/chapter04/: index.html
html-css-js/chapter04/css/: style.css
html-css-js/chapter05/: index.html
html-css-js/chapter05/css/: style.css
html-css-js/chapter06/: index.html
html-css-js/chapter06/css/: style.css
html-css-js/chapter07/: jquery.html
html-css-js/chapter08/: vue.html
html-css-js/chapter08/css/: style.css
html-css-js/sample01/: index.html
python/browser-use-test/: main.py
python/gradio-tutorial/: app.py  pyproject.toml
python/math_bootcamp/: README.md  calculus.ipynb  probability_statistics.ipynb  pyproject.toml
python/nicegui-app/: main.py  pyproject.toml
python/rapidfuzz_test/: README.md  main.py  pyproject.toml
python/text-to-speech/: Dockerfile  README.md  app.py
python/vector_search/: README.md  main.py  pyproject.toml
python/vector_search/src/: main.py
ruby/: require_sample.rb
rust/: .gitignore
rust/first_prj/: Cargo.toml
rust/first_prj/src/: main.rs
rust/projects/branches/src/: main.rs
rust/projects/rust_zero/: .dockerignore  Dockerfile  README.md  docker-compose.yml
sls/cross-compilation/: README.md  handler.py  package-lock.json  serverless.yml
sls/hello-world/: handler.py  package-lock.json  serverless.yml
typescript/: fizzbuzz.ts
typescript/shadcn-nuxt-demo/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
typescript/shadcn-nuxt-demo/components/: DateRangePicker.vue
zsh/: fizzbuzz.sh
(+12 files in other folders)
