[project]
name = "rapidfuzz-test"
version = "0.1.0"
description = "RapidFuzz name matching sample"
requires-python = ">=3.8"

[project.dependencies]
rapidfuzz = ">=3.6.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 